fixed bugs and added dark mode functionality

--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,12 @@
   padding: 0;
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
+  @apply transition-colors duration-200
 }
 
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 3em #646cffaa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 3em #61dafbaa);
 }
